SOLR-16713: Replace Guava usages with pure Java (#1466)
Guava is used in a variety of places that can be simplified especially with Java streams.

* Preconditions -> Objects
* Strings.isNullOrEmpty -> Simple helper method on StrUtils
* Maps/ImmutableMap -> Java Map
* Lists/ImmutableList -> Java List
* Sets/ImmutableSet/ImmutableSortedSet -> Java Set
* Collections2/Iterables/Iterators/ObjectArrays -> Java Stream
* Guava cache -> Caffeine cache

This ends up removing the Guava dependency from 4 build.gradle files:
* modules/analytics
* modules/sql
* modules/gcs-repository - test
* solrj - test